<resources>
    <string name="app_name">Wallet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed_by_password_or_email">"Password or email is not correct"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Sign Up</string>
    <string name="forgot_password">I forgot the password...</string>
    <string name="action_settings">Settings</string>
    <string name="action_cat_male">Кот</string>
    <string name="action_cat_female">Кошка</string>
    <string name="action_kitten">Котёнок</string>
    <string name="quit">Выйти</string>
    <string name="title_home">Транзакции</string>
    <string name="title_categories">Категории</string>
    <string name="title_wallets">Кошельки</string>
    <string name="title_statistic">Статистика</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="server_crushed">Sorry... ours server is crushed</string>
    <string name="smth_wrong">Something went wrong</string>
    <string name="connection_lost_text">Connection with internet is lost. Reconnect by click</string>
    <string name="connect_button">connect</string>
    <string name="empty_textView">You haven\'t got transactions now. Add it by button "plus"</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>

</resources>