<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.wallet.data.transactionItemFragment"
    tools:context=".ui.transactions.TransactionItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTransactionFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/list_connection_lost"
        android:visibility="gone"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_sad_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_view_reconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/connection_lost_text" />

        <Button
            android:id="@+id/button_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_when_transactions_is_null"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_empty_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/text_margin"
            android:layout_height="wrap_content"
            android:text="@string/empty_textView" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp"
        android:visibility="visible"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/fragment_item">


    </androidx.recyclerview.widget.RecyclerView>
</FrameLayout>
